--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,6 @@
 # Run migrations: docker-compose run migrate
 #       Stop all: docker-compose down (add -v to wipe db)
 #
-version: '3.7'
 
 volumes:
   db_data:
@@ -72,3 +71,4 @@ services:
       POSTGRES_DB: spapi
     ports:
       - '5432:5432'
+    command: ["postgres", "-c", "log_statement=all"]
